--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.tal.android.talpingpong"
+        applicationId "com.tal.android.pingpong"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -41,4 +42,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
 }
