--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
 
     implementation('com.squareup.okhttp3:logging-interceptor:4.4.0')
     implementation('com.squareup.okhttp3:okhttp:4.4.0')
+    implementation 'com.google.firebase:firebase-messaging:20.1.2'
 }
