--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:screenOrientation="portrait" />
 
         <service
-            android:name=".ui.fragments.MessagingService"
+            android:name=".services.MessagingService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
