--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+		<activity android:name="com.tal.android.pingpong.ui.activities.ChampionshipActivity">
+		</activity>
 
         <activity
             android:name=".ui.activities.SplashActivity"
