--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:name=".ui.activities.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.tal.android.pingpong.ui.activities.NewChampionshipActivity"
+            android:name=".ui.activities.NewChampionshipActivity"
             android:screenOrientation="portrait" />
 
         <service
